10937 update token info message and fix side bars height (#1620)
* 10937: Updates Info Messages

## What
- Updates token information.

## Why
- Changes in requirements.

## How
Adjusted the relevant information messages to align with the updated requirements.

* 10937: Side Panels Cut the Last Item

## What
The last items of the chat list and agent list are cut in half.

## Why
The parent container of the lists has a toolbar with a fixed height. This height was not considered in the calculation of the list height, causing the last items to be cut off by the header height.

## How
The height of the lists has been adjusted to account for the header height.

* Fixes label key in locale-fr

* remove comment in find.css file

--- a/src/css/ttyg/agent-list.css
+++ b/src/css/ttyg/agent-list.css
@@ -7,8 +7,6 @@
 
 .agent-list-component .agent-list {
     margin-top: 1rem;
-    height: 75vh;
-    max-height: 75vh;
     overflow-y: hidden;
     scrollbar-gutter: stable;
 }
